# BioSigClass_NIRS

./: LICENSE  README.md  pyproject.toml
CIF/: CIF.py
Canonical Interval Forest/: CIF.py
Convolutional Neural Network/: CNN.py
K-Nearest Neighbors/: KNN.py
KNN/: KNN.py
TSF/: TSF.py
examples/: example_data.npy  load_model.py
pre_trained_models/CIF/: model_A_CIF.pkl  model_A_cif.pkl  model_B_CIF.pkl  model_B_cif.pkl  model_C_CIF.pkl  model_C_cif.pkl  model_D_CIF.pkl  model_D_cif.pkl
pre_trained_models/KNN/: model_A_knn.pkl  model_C_knn.pkl
